<resources>
    <string name="app_name">AppMoto</string>
    <string name="sign_out">Sign out</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="basic_data_tab_title">DATOS</string>
    <string name="contacts_tab_title">CONTACTOS</string>
    <string name="next">Siguiente</string>
    <string name="previous">Anterior</string>
    <string name="finish">Finalizar</string>
    <string name="name_text">Nombre</string>
    <string name="birthday_text">Fecha de nacimiento</string>
    <string name="user_data_text">Datos básicos</string>
    <string name="edittext_brithday_hint">Ingresa fecha de nacimiento</string>
    <string name="gender_text">Tipo de sangre</string>
    <string name="contacts_maximum_text">Seleccione un máximo de tres (3) contactos de emergencia</string>
    <string name="stop">Detener</string>
    <string name="start">Iniciar</string>
    <string name="send_alert">Enviar alerta</string>
    <string name="notification_channel_sending_name">Notificacion de viajes</string>
    <string name="notification_sending_title">Viaje en progreso</string>
    <string name="notification_sending_content">Haz click en el icono para terminar tu viaje.</string>
    <string name="notification_sending_body">Prueba contenido</string>
    <string name="debug_data">Debug</string>
    <string name="notification_accident_title">Accidente detectado!</string>
    <string name="notification_accident_content">Reportando accidente a tus contactos y/o plataforma. Se enviará ayuda lo más pronto posible.</string>
    <string name="marca">Marca</string>
    <string name="reference">Referencia</string>
    <string name="model">Modelo</string>
    <string name="placa">Placa</string>
    <string name="register_failed">Registro fallido...</string>
    <string name="register_successfull">Registro exitoso</string>
    <string name="registered_contacts_successfull">Contactos registrados exitosamente!</string>
    <string name="registered_contacts_failed">Fallo en registro de contactos</string>
    <string name="edit_profile">Editar perfil</string>
    <string name="notification_shared_title">Viaje almacenado!</string>
    <string name="notification_shared_content">La información del viaje ha sido guardada exitosamente.</string>
    <string name="notification_shared_fail_title">Upss....</string>
    <string name="notification_shared_fail_content">No se pudo almacenar los datos del viaje.</string>
    <string name="notification_report_fail_title">Ups! No se pudo realizar el reporte</string>
    <string name="notification_report_fail_content">Intenta reportarlo manualmente desde la aplicación.</string>

    <string-array name="blod_array">
        <item>Select</item>
        <item>O+</item>
        <item>O-</item>
        <item>A+</item>
        <item>A-</item>
        <item>B+</item>
        <item>B-</item>
        <item>AB+</item>
        <item>AB-</item>
    </string-array>
</resources>
