<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".activities.formactivity.fragments.SimpleDataFragment">

    <TextView
        android:id="@+id/user_data_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/user_data_text"
        android:textStyle="bold"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/name_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_data_label" />

    <TextView
        android:id="@+id/date_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/birthday_text"
        app:layout_constraintStart_toStartOf="@+id/name_label"
        app:layout_constraintTop_toBottomOf="@+id/name_label" />

    <EditText
        android:id="@+id/name_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Name"
        app:layout_constraintBottom_toBottomOf="@+id/name_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/name_label"
        app:layout_constraintTop_toTopOf="@+id/name_label" />

    <EditText
        android:id="@+id/date_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:focusable="false"
        android:hint="@string/edittext_brithday_hint"
        android:inputType="date"
        app:layout_constraintBottom_toBottomOf="@+id/date_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/date_label"
        app:layout_constraintTop_toTopOf="@+id/date_label" />

    <TextView
        android:id="@+id/blod_label"
        android:layout_width="wrap_content"
        android:layout_height="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/gender_text"
        app:layout_constraintStart_toStartOf="@+id/date_label"
        app:layout_constraintTop_toBottomOf="@+id/date_label" />

    <Spinner
        android:id="@+id/blod_spinner"
        android:layout_width="214dp"
        android:layout_height="37dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/blod_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/blod_label"
        app:layout_constraintTop_toTopOf="@+id/blod_label" />

    <TextView
        android:id="@+id/marca"
        android:layout_width="wrap_content"
        android:layout_height="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/marca"
        app:layout_constraintStart_toStartOf="@+id/date_label"
        app:layout_constraintTop_toBottomOf="@+id/blod_label" />

    <EditText
        android:id="@+id/editmarca"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="@+id/reference"
        app:layout_constraintEnd_toEndOf="@+id/blod_spinner"
        app:layout_constraintHorizontal_bias="0.69"
        app:layout_constraintStart_toStartOf="@+id/blod_spinner"
        app:layout_constraintTop_toTopOf="@+id/reference" />

    <TextView
        android:id="@+id/reference"
        android:layout_width="wrap_content"
        android:layout_height="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/reference"
        app:layout_constraintStart_toStartOf="@+id/date_label"
        app:layout_constraintTop_toBottomOf="@+id/marca" />

    <EditText
        android:id="@+id/editreference"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="@+id/marca"
        app:layout_constraintEnd_toEndOf="@+id/blod_spinner"
        app:layout_constraintHorizontal_bias="0.69"
        app:layout_constraintStart_toStartOf="@+id/blod_spinner"
        app:layout_constraintTop_toTopOf="@+id/marca" />

    <TextView
        android:id="@+id/model"
        android:layout_width="wrap_content"
        android:layout_height="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/model"
        app:layout_constraintStart_toStartOf="@+id/date_label"
        app:layout_constraintTop_toBottomOf="@+id/reference" />

    <EditText
        android:id="@+id/editmodel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="@+id/model"
        app:layout_constraintEnd_toEndOf="@+id/blod_spinner"
        app:layout_constraintHorizontal_bias="0.69"
        app:layout_constraintStart_toStartOf="@+id/blod_spinner"
        app:layout_constraintTop_toTopOf="@+id/model" />

    <TextView
        android:id="@+id/placa"
        android:layout_width="wrap_content"
        android:layout_height="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/placa"
        app:layout_constraintStart_toStartOf="@+id/date_label"
        app:layout_constraintTop_toBottomOf="@+id/model" />

    <EditText
        android:id="@+id/editplaca"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="@+id/placa"
        app:layout_constraintEnd_toEndOf="@+id/blod_spinner"
        app:layout_constraintHorizontal_bias="0.69"
        app:layout_constraintStart_toStartOf="@+id/blod_spinner"
        app:layout_constraintTop_toTopOf="@+id/placa" />

</androidx.constraintlayout.widget.ConstraintLayout>